# AudioUnitSDK

./: .gitignore  CONTRIBUTING.md  _clang-format  _clang-tidy  meson.build  readme.md
.github/: pull_request_template.md
AudioUnitSDK.xcodeproj/: project.pbxproj
AudioUnitSDK.xcodeproj/xcshareddata/xcschemes/: AudioUnitSDK.xcscheme  EmptyPlugIns.xcscheme  Tests.xcscheme
EmptyPlugIns/: EmptyPlugIns.cpp
Source/: AUBase.cpp  AUBase.h  AUBuffer.cpp  AUBuffer.h  AUBufferAllocator.cpp  AUEffectBase.cpp  AUEffectBase.h  AUInputElement.cpp  AUInputElement.h  AUMIDIBase.cpp  AUMIDIBase.h  AUMIDIEffectBase.cpp  AUMIDIEffectBase.h  AUMIDIUtility.h  AUOutputElement.cpp  AUOutputElement.h  AUPlugInDispatch.cpp  AUPlugInDispatch.h  AUScopeElement.cpp  AUScopeElement.h  AUSilentTimeout.h  AUUtility.h  ComponentBase.cpp  ComponentBase.h  MusicDeviceBase.cpp  MusicDeviceBase.h
Tests/: Tests.mm
demos/EmptyPlugIns/: EmptyPlugIns.cpp
hooks/: install.sh  pre-commit
include/AudioUnitSDK/: AUBase.h  AUBuffer.h  AUConfig.h  AUEffectBase.h  AUInputElement.h  AUMIDIBase.h  AUMIDIEffectBase.h  AUMIDIUtility.h  AUOutputElement.h  AUPlugInDispatch.h  AUScopeElement.h  AUSilentTimeout.h  AUThreadSafeList.h  AUUtility.h  AudioUnitSDK.h  ComponentBase.h  MusicDeviceBase.h
src/AudioUnitSDK/: AUBase.cpp  AUBuffer.cpp  AUBufferAllocator.cpp  AUEffectBase.cpp  AUInputElement.cpp  AUMIDIBase.cpp  AUMIDIEffectBase.cpp  AUOutputElement.cpp  AUPlugInDispatch.cpp  AUScopeElement.cpp  ComponentBase.cpp  MusicDeviceBase.cpp
tests/: AUThreadSafeListTests.mm  Tests.mm
tools/: FindUB.sh  build.sh
